basic JWT added

--- a/BS23-SC24-Assignment-Backend/appsettings.json
+++ b/BS23-SC24-Assignment-Backend/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "JwtSettings": {
+    "Issuer": "pTJI0Cb7tzJvO6szlsIQe0alBT5u0F",
+    "Audience": "8FI83RiBnX5p3TCyVEDGJWUOqOQiLB",
+    "Key": "5sUClf0Xh4sjFZ5oyE4vGhcAXPLVtU6o"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=BS23SC24AssignmentDB;User Id=postgres;Password=123123;Trust Server Certificate=true;"
+  }
 }
