DB SQLite to PostgreSQL, admin added on DB Create

--- a/BS23-SC24-Assignment-Backend/appsettings.json
+++ b/BS23-SC24-Assignment-Backend/appsettings.json
@@ -13,5 +13,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=BS23SC24AssignmentDB;User Id=postgres;Password=123123;Trust Server Certificate=true;"
+  },
+  "DefaultAdminUser": {
+    "UserName": "admin",
+    "Email":  "superadmin@gmail.com",
+    "Password": "This(1sAD3m0)paSS"
   }
 }
