Add Cross Server Support

--- a/BS23-SC24-Assignment-Backend/appsettings.json
+++ b/BS23-SC24-Assignment-Backend/appsettings.json
@@ -11,6 +11,12 @@
     }
   },
   "AllowedHosts": "*",
+  "CrosOptions": {
+    "Origins": [
+      "http://localhost:5173",
+      "https://localhost:5173"
+    ],
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=BS23SC24AssignmentDB;User Id=postgres;Password=123123;Trust Server Certificate=true;"
   },
